--- a/2. 管程：并发编程的万能钥匙 - synchronized.md
+++ b/2. 管程：并发编程的万能钥匙 - synchronized.md
@@ -155,9 +155,9 @@ public class SynchronizedString {
 | 同步类对象   | Class 对象  | 在实例方法中保护静态资源       |
 | 同步不同实例 | 各自的 this | 实例级独立同步，不干扰其他实例 |
 
+# 管程
 
-
-# 什么是管程
+## 什么是管程
 
 如果不了解这些现象发生的背后的深层次的原因，很容易导致意外的并发安全问题。要了解这些结果产生的原因，就得了解什么是管程。
 
@@ -185,7 +185,7 @@ public class SynchronizedString {
 
 在下面，我展示了一幅MESA管程模型示意图，它详细描述了MESA模型的主要组成部分。
 
-在管程模型里，共享变量和对共享变量的操作是被封装起来的，图中最外层的框就代表封装的意思。框的上面只有一个入口，并且在入口旁边还有一个入口等待队列。当多个线程同时试图进入管程内部时，只允许一个线程进入，其他线程则在入口等待队列中等待。这个过程类似就医流程的分诊，只允许一个患者就诊，其他患者都在门口等待。
+在管程模型里，共享变量和对共享变量的操作是被封装起来的，图中最外层的框就代表封装的意思。框的上面只有一个入口，并且在入口旁边还有一个入口等待队列。当多个线程同时试图进入管程内部时，只允许一个线程进入，其他线程则在入口等待队列中等待。这个过程类似就医流程的分诊，只允许一个患者就诊，其他患者都在门口等待。   
 
 管程里还引入了条件变量的概念，而且**每个条件变量都对应有一个等待队列，**如下图，条件变量A和条件变量B分别都有自己的等待队列。
 
@@ -289,6 +289,14 @@ public class JavaMesa<T> {
 
 在这段示例代码中，我们用了 Java 并发包里面的 Lock 和 Condition：**await() 和前面我们提到的 wait() 语义是一样的；signal() 和前面我们提到的 notify() 语义是一样的**。
 
+需要注意的是对于 MESA 管程来说，有一个编程范式，就是需要在一个 while 循环里面调用 wait()。**这个是 MESA 管程特有的**。
+
+```java
+while(条件不满足) {
+  wait();
+}
+```
+
 Hasen 模型、Hoare 模型和 MESA 模型的一个核心区别就是当条件满足后，如何通知相关线程。管程要求同一时刻只允许一个线程执行，那当线程 T2 的操作使线程 T1 等待的条件满足时，T1 和 T2 究竟谁可以执行呢？
 
 Hasen 模型里面，要求 notify() 放在代码的最后，这样 T2 通知完 T1 后，T2 就结束了，然后 T1 再执行，这样就能保证同一时刻只有一个线程执行。
@@ -327,7 +335,7 @@ Lock在实现的时候，仍然是按照管程的MESA模型来实现的。
 
 <img src="https://blog-1304855543.cos.ap-guangzhou.myqcloud.com/blog/68747470733a2f2f626c6f672d313330343835353534332e636f732e61702d6775616e677a686f752e6d7971636c6f75642e636f6d2f626c6f672f696d6167652d32303235303432383137313333383034362e706e67" alt="image-20250428171338046" style="zoom: 50%;" />
 
-# synchronized 的 管程实现
+# synchronized 与管程
 
 ## ObjectMonitor
 
