--- a/2. 管程：并发编程的万能钥匙 - synchronized.md
+++ b/2. 管程：并发编程的万能钥匙 - synchronized.md
@@ -199,68 +199,57 @@ public class SynchronizedString {
 
 条件变量及其等待队列我们讲清楚了，下面再说说 wait()、notify()、notifyAll() 这三个操作。前面提到线程 T1 发现“阻塞队列不空”这个条件不满足，需要进到对应的**等待队列**里等待。这个过程就是通过调用 wait() 来实现的。如果我们用对象 A 代表“阻塞队列不空”这个条件，那么线程 T1 需要调用 A.wait()。同理当“阻塞队列不空”这个条件满足时，线程 T2 需要调用 A.notify() 来通知 A 等待队列中的一个线程，此时这个等待队列里面只有线程 T1。至于 notifyAll() 这个方法，它可以通知等待队列中的所有线程。
 
-下面的代码用管程实现了一个线程安全的阻塞队列（再次强调：这个阻塞队列和管程内部的等待队列没关系，示例代码只是用管程来实现阻塞队列，而不是解释管程内部等待队列的实现原理）。阻塞队列有两个操作分别是入队和出队，这两个方法都是先获取互斥锁，类比管程模型中的入口。
+下面的代码用管程实现了一个线程安全的阻塞队列。阻塞队列有两个操作分别是入队和出队，这两个方法都是先获取互斥锁（通过 `synchronized` 关键字），类比管程模型中的入口。
 
-- 对于阻塞队列的入队操作，如果阻塞队列已满，就需要等待直到阻塞队列不满，所以这里用了notFull.await();。
-- 对于阻塞出队操作，如果阻塞队列为空，就需要等待直到阻塞队列不空，所以就用了notEmpty.await();。
-- 如果入队成功，那么阻塞队列就不空了，就需要通知条件变量：阻塞队列不空notEmpty对应的等待队列。
-- 如果出队成功，那就阻塞队列就不满了，就需要通知条件变量：阻塞队列不满notFull对应的等待队列。
+- 对于阻塞队列的入队操作，如果阻塞队列已满，就需要等待直到阻塞队列不满，所以这里用了 `wait();`，让线程进入条件变量的等待队列。
+- 对于阻塞出队操作，如果阻塞队列为空，就需要等待直到阻塞队列不空，所以就用了 `wait();`，让线程进入条件变量的等待队列。
+- 如果入队成功，那么阻塞队列就不空了，就需要通知等待队列中的线程，告诉它们"队列不空"这个条件已经满足，所以调用了 `notify();`。
+- 如果出队成功，那就阻塞队列就不满了，就需要通知等待队列中的线程，告诉它们"队列不满"这个条件已经满足，所以调用了 `notify();`。
 
 ```java
-public class JavaMesa<T> {
-    final Lock lock = new ReentrantLock();
-    // 条件变量：队列不满
-    final Condition notFull = lock.newCondition();
-    // 条件变量：队列不空
-    final Condition notEmpty = lock.newCondition();
 
+public class SynchronizedMesa<T> {
     private final Queue<T> queue = new LinkedList<>();
     private final int capacity;
 
-    public JavaMesa(int capacity) {
+    public SynchronizedMesa(int capacity) {
         this.capacity = capacity;
     }
 
     // 入队
-    public void enq(T x) throws InterruptedException {
-        lock.lock();
-        try {
-            while (queue.size() == capacity) {
-                // 队列满，等待 notFull
-                notFull.await();
-            }
-            queue.add(x);
-            System.out.println("入队: " + x + "，当前大小: " + queue.size());
-
-            // 入队后，队列一定不空，唤醒消费者
-            notEmpty.signal();
-        } finally {
-            lock.unlock();
+    public synchronized void enq(T x) throws InterruptedException {
+        while (queue.size() == capacity) {
+            // 队列满，等待"队列不满"这个条件
+            // wait() 会让当前线程进入条件变量的等待队列
+            this.wait();
         }
+        queue.add(x);
+        System.out.println("入队: " + x + "，当前大小: " + queue.size());
+
+        // 入队后，队列一定不空，唤醒等待"队列不空"条件的线程
+        // notify() 会通知等待队列中的一个线程
+        this.notify();
     }
 
     // 出队
-    public T deq() throws InterruptedException {
-        lock.lock();
-        try {
-            while (queue.isEmpty()) {
-                // 队列空，等待 notEmpty
-                notEmpty.await();
-            }
-            T item = queue.poll();
-            System.out.println("出队: " + item + "，当前大小: " + queue.size());
-
-            // 出队后队列不满，唤醒生产者
-            notFull.signal();
-            return item;
-        } finally {
-            lock.unlock();
+    public synchronized T deq() throws InterruptedException {
+        while (queue.isEmpty()) {
+            // 队列空，等待"队列不空"这个条件
+            // wait() 会让当前线程进入条件变量的等待队列
+            this.wait();
         }
+        T item = queue.poll();
+        System.out.println("出队: " + item + "，当前大小: " + queue.size());
+
+        // 出队后队列不满，唤醒等待"队列不满"条件的线程
+        // notify() 会通知等待队列中的一个线程
+        this.notify();
+        return item;
     }
 
     // demo
     public static void main(String[] args) {
-        JavaMesa<Integer> mesa = new JavaMesa<>(3);
+        SynchronizedMesa<Integer> mesa = new SynchronizedMesa<>(3);
 
         // 生产者
         new Thread(() -> {
@@ -287,7 +276,9 @@ public class JavaMesa<T> {
 }
 ```
 
-在这段示例代码中，我们用了 Java 并发包里面的 Lock 和 Condition：**await() 和前面我们提到的 wait() 语义是一样的；signal() 和前面我们提到的 notify() 语义是一样的**。
+在这段示例代码中，我们使用了 Java 内置的 `synchronized` 和 `wait()`、`notify()` 方法。**`wait()` 方法用于让线程进入条件变量的等待队列；`notify()` 方法用于通知等待队列中的一个线程，告诉它条件已经满足**。
+
+需要注意的是，Java 内置的管程（synchronized）只有一个条件变量，所以"队列不满"和"队列不空"这两个条件实际上共享同一个等待队列。但通过 `while` 循环检查不同的条件，我们可以模拟多个条件变量的效果。当线程被唤醒后，会重新检查条件是否满足，如果不满足就继续等待，这正是 MESA 管程模型的特点。
 
 需要注意的是对于 MESA 管程来说，有一个编程范式，就是需要在一个 while 循环里面调用 wait()。**这个是 MESA 管程特有的**。
 
