--- a/3. 管程：并发编程的万能钥匙 - Lock.md
+++ b/3. 管程：并发编程的万能钥匙 - Lock.md
@@ -21,8 +21,15 @@ public void transfer() {
 ## Lock的管程实现
 
 ```java
+package com.jyc.demo.concurrent.monitor;
 
-public class LockMonitor<T> {
+import java.util.LinkedList;
+import java.util.Queue;
+import java.util.concurrent.locks.Condition;
+import java.util.concurrent.locks.Lock;
+import java.util.concurrent.locks.ReentrantLock;
+
+public class LockMesa<T> {
     final Lock lock = new ReentrantLock();
     // 条件变量：队列不满
     final Condition notFull = lock.newCondition();
@@ -32,7 +39,7 @@ public class LockMonitor<T> {
     private final Queue<T> queue = new LinkedList<>();
     private final int capacity;
 
-    public LockMonitor(int capacity) {
+    public LockMesa(int capacity) {
         this.capacity = capacity;
     }
 
@@ -75,7 +82,7 @@ public class LockMonitor<T> {
 
     // demo
     public static void main(String[] args) {
-        LockMonitor<Integer> mesa = new LockMonitor<>(3);
+        LockMesa<Integer> mesa = new LockMesa<>(3);
 
         // 生产者
         new Thread(() -> {
