--- a/2. 管程：并发编程的万能钥匙 - synchronized.md
+++ b/2. 管程：并发编程的万能钥匙 - synchronized.md
@@ -42,7 +42,7 @@ synchronized (ClassName.class) {
 
 **适用**：跨实例同步。
 
-## 用法四：作用于任意对象（代码块）
+## 用法四：作用于任意对象
 
 ```java
 private final Object lock = new Object();
@@ -191,7 +191,7 @@ public class SynchronizedString {
 
 <img src="https://blog-1304855543.cos.ap-guangzhou.myqcloud.com/blog/image-20260201175114449.png" alt="image-20260201175114449" style="zoom:67%;" />
 
-那**条件变量**和**条件变量等待队列**的作用是什么呢？其实就是解决线程同步问题。你可以结合上面提到的阻塞队列的例子加深一下理解（阻塞队列的例子，是用管程来实现线程安全的阻塞队列，这个阻塞队列和管程内部的等待队列没有关系，一定要注意阻塞队列和等待队列是不同的**）。
+那**条件变量**和**条件变量等待队列**的作用是什么呢？
 
 假设有个线程 T1 执行阻塞队列的出队操作，执行出队操作，需要注意有个前提条件，就是阻塞队列不能是空的（空队列只能出 Null 值，是不允许的），**阻塞队列不空**这个前提条件对应的就是管程里的条件变量。 如果线程 T1 进入管程后恰好发现阻塞队列是空的，那怎么办呢？等待啊，去哪里等呢？就去条件变量对应的**等待队列**里面等。此时线程 T1 就去“队列不空”这个条件变量的等待队列中等待。这个过程类似于大夫发现你要去验个血，于是给你开了个验血的单子，你呢就去验血的队伍里排队。线程 T1 进入条件变量的等待队列后，是允许其他线程进入管程的。这和你去验血的时候，医生可以给其他患者诊治，道理都是一样的。
 
